# sdot

./: .gitignore  .tasks.dot  CMakeLists.txt  COMMENTS.md  README.md  commentaires  weights.py
benchmarks/: bench_solve_2D.cpp  bench_traversal_2D.cpp  bench_volume_2D.cpp  bench_volume_3D.cpp  bench_volume_3D_CGAL.cpp  launch.py  mpi.py  scal.py  set_up_diracs_2D.h  set_up_diracs_3D.h
benchmarks/curves/: scaling_mpi.py
kernels/: random_vec.h  write_to_stream.cpp  write_to_stream.h
objects/write_to_stream/: CMakeLists.txt
objects/write_to_stream/_16_std%3a%3aostream_16_std%3a%3aint32_t/: kernel.cpp
objects/write_to_stream/_17_std%3a%3aostream*_16_std%3a%3aint32_t/: CMakeLists.txt  kernel.cpp
old/: CompiledSymbolMap.h  ShapeData.cpp  ShapeData.h
old/ConvexPolytop/: ConvexPolytopSet.tcc
old/generation/: CutCase.cpp  CutCase.h  CutItem.h  CutOp.cpp  CutOp.h  CutOpWithNamesAndInds.h  RecursivePolytop.h  RecursivePolytop.tcc  RecursivePolytopConnectivity.h  generation_geometry.cpp
old/old_parex/: ArchId.cpp  ArchId.h  CompiledKernelCode.h  Destructors.cpp  Destructors.h  ERROR.h  Kernel.cpp  Kernel.h  KernelWithCompiledCode.h  N.h  Output.h  RcPtr.h  RcPtr.tcc  RefCount.h  SrcWriter.cpp  SrcWriter.h  Task.cpp  TypeInfo.cpp  TypeInfo.h  TypedVariant.h  VariantWithPtr.cpp  VariantWithPtr.h  type_name.h
old/old_parex/kernels/: to_string.h
old/src/parex/: Child.cpp  Kernel.cpp  Output.cpp  Output.h  Scheduler.cpp  Task.h  Value.cpp
scripts/: gen_plane_cut_procs.cpp
scripts/cmake/: gtest.cmake
scripts/hugo/: Makefile  update_qt_creator_files.sh
scripts/internal/: GenPlaneCutProc.cpp  GenPlaneCutProc.h  PlaneCutProcPlan.cpp  PlaneCutProcPlan.h  SimdGen.cpp  SimdGen.h  SimdGenOp.cpp  SimdGenOp.h
src/asimd/: .gitignore
src/asimd/tests/: test_simd.cpp
src/parex/: .gitignore  Child.h  Kernel.cpp  Kernel.h  KernelCode.cpp  KernelCode.h  Output.cpp  Output.h  OutputFuncList.h  README.md  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  TaskRef.h  Value.cpp  Value.h  type_name.h
src/parex/arch/: AlignedAllocator.h  Arch.h  SimdRange.h  SimdVec.h  SimdVecInternal.h  SimdVecInternal_AVX2.h  SimdVecInternal_AVX512.h  SimdVecInternal_SSE2.h  SimdVecRec.h  assign_repeated.h  copy.h
src/parex/containers/: Tensor.h  Tensor.tcc  Vec.h
src/parex/kernels/: New_brace.h  New_paren.h  add.h  destroy.h  move.h  random_vec.h  to_string.h
src/parex/old_parex/: CompiledKernelCode.cpp  CompiledKernelCode.h  CompiledSymbolMap.cpp  CompiledSymbolMap.h  Destructors.cpp  Destructors.h  (+23 more)
src/sdot/: AreaOutput.h  ConvexPolyhedron2.h  ConvexPolyhedron2.tcc  ConvexPolyhedron3.h  ConvexPolyhedron3.tcc  OptimalTransportSolver.h  Point2.h  Point3.h  SubdividedIcosahedron.h  VtkOutput.h  VtkOutput.tcc  get_der_integrals_wrt_weights.h  get_der_integrals_wrt_weights_ap.h  get_integrals.h
tests/: bench_ConvexPolyhedron2.cpp  bench_SetOfElementaryPolytops.cpp  catch_main.h  test_ConvexPolyhedron2.cpp  test_ConvexPolyhedron2_Arf.cpp  test_ConvexPolyhedron3.cpp  test_ConvexPolytopSet.cpp  test_ElementaryPolytopTypeSet.cpp  test_Grid2.cpp  test_IntrusiveList.cpp  test_ParEx.cpp  test_Periodic.cpp  test_Pool.cpp  test_PoolWithInactiveItems.cpp  test_PowerDiagram.cpp  test_RadixSort.cpp  test_RecursiveConvexPolytop.cpp  test_RecursivePolytop.cpp  test_RecursivePolytopConnectivity.cpp  test_SetOfElementaryPolytops.cpp  test_SetOfElementaryPolytops_.cpp  test_Simd.cpp  test_SimplexSumPolytop.cpp  test_SpZGrid.cpp  test_StructOfArrays.cpp  test_SymbolicExpr.cpp  test_der_boundary_integral.cpp  test_der_pos.cpp  test_derivatives.cpp  test_parex.cpp  test_radix_sort.cpp  test_scaled_image.cpp  test_simd.cpp
tests/asimd/: catch_main.h  test_asimd.cpp  test_asimd_gpu.cpp
tests/parex/: catch_main.h  test_CompiledSymbolMap.cpp  test_CompiledTask.cpp  test_GeneratedLibrarySet.cpp  test_HwGraph.cpp  test_Scalar.cpp  test_String.cpp  test_Tensor.cpp  test_TypeFactory.cpp  test_Value.cpp  test_gtensor.cpp  test_gvector.cpp  test_starpu.cpp
tests/prel_bench/: bench_case_dispatch.cpp
(+807 files in other folders)
